# ParallelDropIn_LSTM

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
src/paralleldropin_lstm/: __init__.py  model.py  scan.py
tests/: test_parity.py
